# pedHapCpp

./: CMakeLists.txt  main.cpp
scripts/: generate_trio.py  mendel.py  merge.sh  parse_recom.py  parser_lst.py  simulate.py
src/: chromo_phaser.cpp  chromo_phaser.h  cxxopts.hpp  pedigree.cpp  pedigree.h  phaseInfo.cpp  phaseInfo.h  phaser.cpp  phaser.h  results.cpp  results.h  trio.cpp  trio.h  trioPhaser.cpp  trioPhaser.h  type.cpp  type.h  util.cpp  util.h  vcf.cpp  vcf.h  vcf_io.cpp  vcf_io.h
statistics/: haplotype_state.py  record.py  stats.py
vcflib/: Variant.cpp  Variant.h  tabix.hpp
